--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,37 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-color: green;
+}
+h1 {
+  text-decoration: solid;
+  font-style: unset;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.card {
+  text-align: center;
+  font-size: 90px;
+  text-decoration: solid;
+  display: inline-block;
+  margin: auto;
+  height: 500px;
+  width: 250px;
+  background-color: white;
+  padding: 20px;
+  padding-top: 180px;
+
+  border-radius: 20px;
+  position: relative;
+}
+.arriba {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 80px;
+}
+.abajo {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  font-size: 80px;
+}
